@@ -18,72 +18,91 @@
 package org.apache.doris.qe;
 
 import org.apache.doris.common.DdlException;
+import org.apache.doris.thrift.TRuntimeFilterType;
 
 import org.junit.Assert;
 import org.junit.Test;
 
 public class RuntimeFilterTypeHelperTest {
+    private static final String TOO_LARGE_LONG = "9223372036854775808";
 
     @Test
     public void testNormal() throws DdlException {
-        String runtimeFilterType = "";
-        Assert.assertEquals(new Long(0L), RuntimeFilterTypeHelper.encode(runtimeFilterType));
-
-        runtimeFilterType = "IN";
-        Assert.assertEquals(new Long(1L), RuntimeFilterTypeHelper.encode(runtimeFilterType));
-
-        runtimeFilterType = "BLOOM_FILTER";
-        Assert.assertEquals(new Long(2L), RuntimeFilterTypeHelper.encode(runtimeFilterType));
-
-        runtimeFilterType = "MIN_MAX";
-        Assert.assertEquals(new Long(4L), RuntimeFilterTypeHelper.encode(runtimeFilterType));
-
-        runtimeFilterType = "IN,MIN_MAX";
-        Assert.assertEquals(new Long(5L), RuntimeFilterTypeHelper.encode(runtimeFilterType));
-
-        runtimeFilterType = "MIN_MAX, BLOOM_FILTER";
-        Assert.assertEquals(new Long(6L), RuntimeFilterTypeHelper.encode(runtimeFilterType));
-
-        runtimeFilterType = "IN_OR_BLOOM_FILTER";
-        Assert.assertEquals(new Long(8L), RuntimeFilterTypeHelper.encode(runtimeFilterType));
-
-        runtimeFilterType = "MIN_MAX,IN_OR_BLOOM_FILTER";
-        Assert.assertEquals(new Long(12L), RuntimeFilterTypeHelper.encode(runtimeFilterType));
-
-        long runtimeFilterTypeValue = 0L;
-        Assert.assertEquals("", RuntimeFilterTypeHelper.decode(runtimeFilterTypeValue));
-
-        runtimeFilterTypeValue = 1L;
-        Assert.assertEquals("IN", RuntimeFilterTypeHelper.decode(runtimeFilterTypeValue));
+        Assert.assertEquals(Long.valueOf(0L), RuntimeFilterTypeHelper.encode(""));
+        Assert.assertEquals(Long.valueOf(1L), RuntimeFilterTypeHelper.encode("IN"));
+        Assert.assertEquals(Long.valueOf(2L), RuntimeFilterTypeHelper.encode("BLOOM_FILTER"));
+        Assert.assertEquals(Long.valueOf(4L), RuntimeFilterTypeHelper.encode("MIN_MAX"));
+        Assert.assertEquals(Long.valueOf(5L), RuntimeFilterTypeHelper.encode("IN,MIN_MAX"));
+        Assert.assertEquals(Long.valueOf(6L), RuntimeFilterTypeHelper.encode("MIN_MAX,BLOOM_FILTER"));
+        Assert.assertEquals(Long.valueOf(8L), RuntimeFilterTypeHelper.encode("IN_OR_BLOOM_FILTER"));
+        Assert.assertEquals(Long.valueOf(12L), RuntimeFilterTypeHelper.encode("MIN_MAX,IN_OR_BLOOM_FILTER"));
+        Assert.assertEquals(Long.valueOf((long) TRuntimeFilterType.MIN_MAX.getValue()),
+                RuntimeFilterTypeHelper.encode(String.valueOf(TRuntimeFilterType.MIN_MAX.getValue())));
+        Assert.assertEquals("", RuntimeFilterTypeHelper.decode(0L));
+        Assert.assertEquals("IN", RuntimeFilterTypeHelper.decode(1L));
     }
 
-    @Test(expected = DdlException.class)
-    public void testInvalidSqlMode() throws DdlException {
-        RuntimeFilterTypeHelper.encode("BLOOM,IN");
-        Assert.fail("No exception throws");
+    @Test
+    public void testInvalidSqlMode() {
+        Assert.assertThrows(DdlException.class, () -> RuntimeFilterTypeHelper.encode("BLOOM,IN"));
     }
 
-    @Test(expected = DdlException.class)
-    public void testInvalidDecode() throws DdlException {
-        RuntimeFilterTypeHelper.decode(32L);
-        Assert.fail("No exception throws");
+    @Test
+    public void testEncodeTooLargeNumber() {
+        Assert.assertThrows(DdlException.class, () -> RuntimeFilterTypeHelper.encode(TOO_LARGE_LONG));
     }
 
-    @Test(expected = DdlException.class)
-    public void testInvalidSqlMode2() throws DdlException {
-        RuntimeFilterTypeHelper.encode("BLOOM_FILTER,IN");
-        Assert.fail("No exception throws");
+    @Test
+    public void testEncodeNegativeNumber() {
+        Assert.assertThrows(DdlException.class, () -> RuntimeFilterTypeHelper.encode("-1"));
     }
 
-    @Test(expected = DdlException.class)
-    public void testInvalidSqlMode3() throws DdlException {
-        RuntimeFilterTypeHelper.encode("BLOOM_FILTER,IN_OR_BLOOM_FILTER");
-        Assert.fail("No exception throws");
+    @Test
+    public void testEncodeInvalidMask() {
+        Assert.assertThrows(DdlException.class, () -> RuntimeFilterTypeHelper.encode("32"));
     }
 
-    @Test(expected = DdlException.class)
-    public void testInvalidSqlMode4() throws DdlException {
-        RuntimeFilterTypeHelper.encode("IN,IN_OR_BLOOM_FILTER");
-        Assert.fail("No exception throws");
+    @Test
+    public void testInvalidDecode() {
+        Assert.assertThrows(DdlException.class, () -> RuntimeFilterTypeHelper.decode(32L));
+    }
+
+    @Test
+    public void testInvalidSqlMode2() {
+        Assert.assertThrows(DdlException.class, () -> RuntimeFilterTypeHelper.encode("BLOOM_FILTER,IN"));
+    }
+
+    @Test
+    public void testInvalidSqlMode3() {
+        Assert.assertThrows(DdlException.class,
+                () -> RuntimeFilterTypeHelper.encode("BLOOM_FILTER,IN_OR_BLOOM_FILTER"));
+    }
+
+    @Test
+    public void testInvalidSqlMode4() {
+        Assert.assertThrows(DdlException.class, () -> RuntimeFilterTypeHelper.encode("IN,IN_OR_BLOOM_FILTER"));
+    }
+
+    @Test
+    public void testVariableVarConvertersEntryNormal() throws DdlException {
+        Assert.assertEquals(Long.valueOf((long) TRuntimeFilterType.MIN_MAX.getValue()),
+                VariableVarConverters.encode(SessionVariable.RUNTIME_FILTER_TYPE,
+                        String.valueOf(TRuntimeFilterType.MIN_MAX.getValue())));
+        Assert.assertEquals(Long.valueOf(12L),
+                VariableVarConverters.encode(SessionVariable.RUNTIME_FILTER_TYPE, "MIN_MAX,IN_OR_BLOOM_FILTER"));
+    }
+
+    @Test
+    public void testVariableVarConvertersEntryInvalidValues() {
+        Assert.assertThrows(DdlException.class,
+                () -> VariableVarConverters.encode(SessionVariable.RUNTIME_FILTER_TYPE, TOO_LARGE_LONG));
+        Assert.assertThrows(DdlException.class,
+                () -> VariableVarConverters.encode(SessionVariable.RUNTIME_FILTER_TYPE, "-1"));
+        Assert.assertThrows(DdlException.class,
+                () -> VariableVarConverters.encode(SessionVariable.RUNTIME_FILTER_TYPE, "32"));
+        Assert.assertThrows(DdlException.class,
+                () -> VariableVarConverters.encode(SessionVariable.RUNTIME_FILTER_TYPE, "BLOOM"));
+        Assert.assertThrows(DdlException.class,
+                () -> VariableVarConverters.encode(SessionVariable.RUNTIME_FILTER_TYPE, "BLOOM_FILTER,IN"));
     }
 }
